# claws-aquarium

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cross.toml  Dockerfile  LICENSE  LICENSE-APACHE  Makefile  README.md  README_CN.md  SECURITY.md  SETUP.md  TASK2_INDEX.md  docker-compose.yml  install.sh  ironclaw.bash  ironclaw.fish  openclaw_ecosystem_report.md  package-lock.json  package.json  program.md  pyproject.toml  setup.sh  tinyclaw.sh  uninstall.sh  vitest.config.ts
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  lib.rs  middleware.rs  server.rs  types.rs  webchat.rs
crates/openfang-api/static/: index_body.html  index_head.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/js/: api.js  app.js
crates/openfang-api/tests/: daemon_lifecycle_test.rs  load_test.rs
crates/openfang-channels/: Cargo.toml
crates/openfang-channels/src/: discourse.rs  feishu.rs  gitter.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  mastodon.rs  matrix.rs  nextcloud.rs  reddit.rs  rocketchat.rs  teams.rs  telegram.rs  twitch.rs  webex.rs  whatsapp.rs  xmpp.rs
crates/openfang-channels/tests/: bridge_integration_test.rs
crates/openfang-memory/: Cargo.toml
crates/openfang-memory/src/: migration.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/openfang-migrate/: Cargo.toml
crates/openfang-migrate/src/: lib.rs  openclaw.rs  report.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  apply_patch.rs  context_budget.rs  copilot_oauth.rs  docker_sandbox.rs  embedding.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_errors.rs  loop_guard.rs  mcp.rs  mcp_server.rs  provider_health.rs  routing.rs  sandbox.rs  shell_bleed.rs  str_utils.rs  tool_policy.rs  web_cache.rs  web_search.rs  workspace_sandbox.rs
crates/openfang-runtime/src/drivers/: copilot.rs  fallback.rs  gemini.rs
crates/openfang-skills/: Cargo.toml
crates/openfang-skills/bundled/ansible/: SKILL.md
crates/openfang-skills/bundled/api-tester/: SKILL.md
crates/openfang-skills/bundled/azure/: SKILL.md
crates/openfang-skills/bundled/code-reviewer/: SKILL.md
crates/openfang-skills/bundled/confluence/: SKILL.md
crates/openfang-skills/bundled/crypto-expert/: SKILL.md
crates/openfang-skills/bundled/email-writer/: SKILL.md
crates/openfang-skills/bundled/git-expert/: SKILL.md
crates/openfang-skills/bundled/graphql-expert/: SKILL.md
crates/openfang-skills/bundled/helm/: SKILL.md
crates/openfang-skills/bundled/interview-prep/: SKILL.md
crates/openfang-skills/bundled/jira/: SKILL.md
crates/openfang-skills/bundled/kubernetes/: SKILL.md
crates/openfang-skills/bundled/linear-tools/: SKILL.md
crates/openfang-skills/bundled/linux-networking/: SKILL.md
crates/openfang-skills/bundled/llm-finetuning/: SKILL.md
crates/openfang-skills/bundled/ml-engineer/: SKILL.md
crates/openfang-skills/bundled/mongodb/: SKILL.md
crates/openfang-skills/bundled/nginx/: SKILL.md
crates/openfang-skills/bundled/postgres-expert/: SKILL.md
crates/openfang-skills/bundled/presentation/: SKILL.md
crates/openfang-skills/bundled/project-manager/: SKILL.md
crates/openfang-skills/bundled/redis-expert/: SKILL.md
crates/openfang-skills/bundled/regex-expert/: SKILL.md
crates/openfang-skills/bundled/rust-expert/: SKILL.md
crates/openfang-skills/bundled/security-audit/: SKILL.md
crates/openfang-skills/bundled/sentry/: SKILL.md
crates/openfang-skills/bundled/sqlite-expert/: SKILL.md
crates/openfang-skills/bundled/technical-writer/: SKILL.md
crates/openfang-skills/bundled/typescript-expert/: SKILL.md
crates/openfang-skills/bundled/vector-db/: SKILL.md
crates/openfang-skills/bundled/wasm-expert/: SKILL.md
crates/openfang-skills/bundled/web-search/: SKILL.md
crates/openfang-skills/bundled/writing-coach/: SKILL.md
crates/openfang-skills/src/: bundled.rs  marketplace.rs  openclaw_compat.rs  verify.rs
crates/openfang-wire/: Cargo.toml
crates/openfang-wire/src/: lib.rs  message.rs  peer.rs  registry.rs
repos/nemoclaw/nemoclaw-blueprint/: blueprint.yaml  pyproject.toml
repos/nemoclaw/nemoclaw-blueprint/policies/: openclaw-sandbox.yaml
repos/openfang/crates/openfang-cli/: Cargo.toml
repos/openfang/crates/openfang-desktop/: Cargo.toml  tauri.conf.json
repos/openfang/crates/openfang-extensions/: Cargo.toml
repos/openfang/crates/openfang-hands/: Cargo.toml
repos/openfang/crates/openfang-types/: Cargo.toml
repos/openjarvis/: .gitignore  mkdocs.yml  pyproject.toml
repos/openjarvis/.github/workflows/: docs.yml  frontend.yml
repos/openjarvis/configs/openjarvis/: config.toml
repos/openjarvis/deploy/docker/: Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  Dockerfile.sandbox  docker-compose.gpu.rocm.yml  docker-compose.yml
repos/openjarvis/deploy/systemd/: openjarvis.service
repos/openjarvis/desktop/: README.md  index.html  package.json
repos/openjarvis/desktop/src-tauri/: Cargo.toml  tauri.conf.json
repos/openjarvis/docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  overview.md  security.md
repos/openjarvis/frontend/: package-lock.json  tsconfig.tsbuildinfo  vite.config.ts
repos/openjarvis/scripts/: quickstart.sh
repos/openjarvis/tests/: conftest.py
rust/: Cargo.toml
rust/crates/openjarvis-a2a/: Cargo.toml
rust/crates/openjarvis-engine/: Cargo.toml
rust/crates/openjarvis-learning/: Cargo.toml
rust/crates/openjarvis-mcp/: Cargo.toml
rust/crates/openjarvis-python/: Cargo.toml  pyproject.toml
rust/crates/openjarvis-recipes/: Cargo.toml
rust/crates/openjarvis-scheduler/: Cargo.toml
rust/crates/openjarvis-skills/: Cargo.toml
rust/crates/openjarvis-telemetry/: Cargo.toml
rust/crates/openjarvis-tools/: Cargo.toml
rust/crates/openjarvis-workflow/: Cargo.toml
tests/e2e/: README.md  mock_llm.py  pyproject.toml
tests/e2e/scenarios/: test_chat.py  test_html_injection.py  test_skills.py  test_tool_approval.py
(+2401 files in other folders)
