# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "nemoclaw-docs"
version = "0.1.0"
description = "Documentation build for NemoClaw"
requires-python = ">=3.11"

[dependency-groups]
docs = [
    "sphinx<=7.5",
    "myst-parser<=5",
    "sphinx-copybutton<=0.6",
    "sphinx-design",
    "sphinx-autobuild",
    "sphinxcontrib-mermaid",
    "nvidia-sphinx-theme",
    "sphinx-llm>=0.3.0",
]

[tool.uv]
package = false
managed = true
