[package]
name = "openjarvis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
openjarvis-core = { path = "../openjarvis-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
