[package]
name = "openjarvis-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
openjarvis-core = { path = "../openjarvis-core" }
openjarvis-engine = { path = "../openjarvis-engine" }
openjarvis-security = { path = "../openjarvis-security" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
meval = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = "3"
