[package]
name = "openfang-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extension & integration system for OpenFang — one-click MCP server setup, credential vault, OAuth2 PKCE"

[dependencies]
openfang-types = { path = "../openfang-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
argon2 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
