[package]
name = "openfang-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for the OpenFang Agent OS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
